RESOLVED FIXED 96740
[WK2][WKTR] TestRunner is not dumping some frame load callbacks information
https://bugs.webkit.org/show_bug.cgi?id=96740
Summary [WK2][WKTR] TestRunner is not dumping some frame load callbacks information
Chris Dumez
Reported 2012-09-14 02:39:38 PDT
Bug 42331 added support for testrunner.dumpFrameLoadCallbacks but the callback dumping is incomplete. At least the following dumping is missing: "didDisplayInsecureContent" "didRunInsecureContent" Several test cases are skipped in WK2 because of this.
Attachments
Patch (6.19 KB, patch)
2012-09-14 03:08 PDT, Chris Dumez
kenneth: review+
webkit.review.bot: commit-queue-
Patch for landing (5.70 KB, patch)
2012-09-14 03:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-14 03:08:35 PDT
WebKit Review Bot
Comment 2 2012-09-14 03:17:48 PDT
Comment on attachment 164083 [details] Patch Rejecting attachment 164083 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: with fuzz 3. patching file LayoutTests/platform/wk2/Skipped Hunk #1 FAILED at 237. Hunk #2 FAILED at 509. 2 out of 2 hunks FAILED -- saving rejects to file LayoutTests/platform/wk2/Skipped.rej patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Kenneth Ro..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/13835954
Chris Dumez
Comment 3 2012-09-14 03:23:48 PDT
Created attachment 164089 [details] Patch for landing Rebased on master. Could someone please cq+ ?
WebKit Review Bot
Comment 4 2012-09-14 04:21:37 PDT
Comment on attachment 164089 [details] Patch for landing Clearing flags on attachment: 164089 Committed r128585: <http://trac.webkit.org/changeset/128585>
WebKit Review Bot
Comment 5 2012-09-14 04:21:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.