[WK2][WKTR] TestRunner is not dumping some frame load callbacks information https://bugs.webkit.org/show_bug.cgi?id=96740

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-14
Reviewed by Kenneth Rohde Christiansen.

Tools:

Dump information expected by the test cases about the following
frame load callbacks:
"didDisplayInsecureContentForFrame"
"didRunInsecureContentForFrame"
"didDetectXSSForFrame"

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willPerformClientRedirectForFrame): Print a URL
as expected by test results by calling pathSuitableForTestResult() instead
of printing raw URL.
(WTR::InjectedBundlePage::didDisplayInsecureContentForFrame):
(WTR::InjectedBundlePage::didRunInsecureContentForFrame):
(WTR::InjectedBundlePage::didDetectXSSForFrame):

LayoutTests:

Unskip test cases which were failing due to missing
frame load callbacks information dumping with
WebKitTestRunner.

* platform/wk2/Skipped:

Canonical link: https://commits.webkit.org/114671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128585 268f45cc-cd09-0410-ab3c-d52691b4dbfc